# recommend-system

./: config.json  main.py
algorithm/DIEN/: ckpt_2_pb.py  data_iterator.py  model.py  process_data.py  shuffle.py  train.py
algorithm/app/: ncfTF.py  rankingTF.py  t_ncfTF.py  t_rankingTF.py
algorithm/ncf/: NCF.py  NCF_input.py  main.py  metrics.py
algorithm/ncf_util/: data_pre.py  int2str.py  pre_dict_data.py
dataflow/: .gitignore  CMakeLists.txt  setup.py
dataflow/modules/: CMakeLists.txt
dataflow/modules/model_runner/include/: model_runner.hpp
dataflow/modules/model_runner/src/: model_runner.cpp
dataflow/modules/python/src/: py_rank.cpp
dataflow/modules/ranking/include/: ranking.hpp
dataflow/modules/ranking/src/: ranking.cpp
dataflow/modules/unitest/: CMakeLists.txt  ranking_perf.cpp  ranking_test.cpp  test_ranking.py
plugin/: __init__.py  bus.py  log.py  mysql_wrapper.py  redis_wrapper.py  utils.py
plugin/ncf/: itemcf_plugin.py  recall.py  user_plugin.py
plugin/ranking/: __init__.py  ranking.py  ranking_plugin.py  rankingtf_plugin.py
plugin/web/: __init__.py  recommend.py  search.py  webui.py  webui_plugin.py
webIDE/static/: index.css  iteminfo.css  signin.css  util.js
webIDE/template/: 404.html  index.html  iteminfo.html  login-1.html  login.html  search.html
